@@ -40,6 +40,8 @@ This release includes:
     enumTypeId before creating drop-down
   - Auto create drop-downs for fields with a type one relationship, with
     limit of 200 to avoid crazy drop-downs
+  - Choose default subscreen (override by path) based on user agent or
+    other condition (using any data available in the ec)
 - Resource Facade
   - Method for FOP transform to PDF, etc
   - Support .gstring templates (groovy.codehaus.org/Groovy+Templates)
@@ -452,9 +454,13 @@ Notable features not yet implemented:
 Tools probable for 1.0 final:
 ===========================================================================
 
-- Choose macro templates and render-mode.text based on user agent in
-  addition to render mode (for some examples of strings to look for see:
-  http://www.hand-interactive.com/resources/detect-mobile-javascript.htm)
+- Tools Screens
+  - Auto Screen
+    - Dynamic tabs (partial page load)
+    - Editable data grid, created by form-list, for detail and assoc
+      related entities
+- XML Screens
+  - Override login path in screen (use value from deepest screen in path)
 - Tools Screens
   - Entity
     - Entity Data Export screen
